--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header class="new-header-container">
+  <img
+    class="new-header__logo"
+    src="/imgs/logo_e-new.png"
+    alt="logo nova era"
+  />
+</header>
