--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -89,9 +89,15 @@ $height-24: 1.5rem;
 $height-32: 2rem;
 $height-48: 3rem;
 $height-64: 4rem;
+$height-80: 5rem;
+$height-96: 6rem;
+$height-100: 6.25rem;
+
 $height-full: 100vh;
 
 $gap-0: 0rem;
+$gap-4: 0.25rem;
+$gap-6: 0.375rem;
 $gap-8: 0.5rem;
 $gap-16: 1rem;
 $gap-24: 1.5rem;
