--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<section class="new-section-container">
+  <form class="new-form-login" action="#">
+    <div class="form-floating new-inputs">
+      <input
+        class="form-control"
+        type="text"
+        name="cpf-usuario"
+        id="cpf-usuario"
+        placeholder="Digite o CPF para Login"
+      />
+      <label for="cpf-usuario">Digite o CPF para Login</label>
+    </div>
+    <div class="form-floating new-inputs">
+      <input
+        class="new-input form-control"
+        type="password"
+        name="senha-usuario"
+        id="senha-usuario"
+        placeholder="Digite a senha para Login"
+      />
+      <label for="senha-usuario">Digite a senha para Login</label>
+    </div>
+    <button class="new-btn" type="submit">Entrar</button>
+  </form>
+</section>
