--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@use "./scss/variables";
+@use "./scss/mixins";
+
+.new-section-container {
+  background-color: red;
+  width: variables.$width-full;
+  height: calc(
+    variables.$height-full - (variables.$height-64 + variables.$height-100)
+  );
+}
+
+.new-inputs {
+  width: variables.$width-100p;
+}
