finaliza criacao de login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,6 @@
 <section class="new-section-container">
   <form class="new-form-login" action="#">
+    <new-titles-section tituloSecao="Login"></new-titles-section>
     <div class="form-floating new-inputs">
       <input
         class="form-control"
