--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,12 @@
 @use "./scss/mixins";
 
 .new-section-container {
-  background-color: red;
+  background-color: variables.$color-primary-light;
   width: variables.$width-full;
   height: calc(
     variables.$height-full - (variables.$height-64 + variables.$height-100)
   );
+  @include mixins.flexbox(column, center, center, variables.$gap-16);
 }
 
 .new-inputs {
