--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,8 +6,17 @@
   height: variables.$height-64;
   background-color: variables.$color-primary-light;
   @include mixins.flexbox(row, center, center, variables.$gap-0);
+
+  @media (min-width: 390px) and (max-width: 412px) {
+    height: 200px;
+  }
+
   .new-header__logo {
     width: 64px;
     border-radius: variables.$radius-8;
+
+    @media (min-width: 390px) and (max-width: 412px) {
+      width: 200px;
+    }
   }
 }
